# infrastructure

./: .gitignore  GitVersion.yml  README.md  setup_k3s.sh
.github/: dependabot.yml
.github/workflows/: db-tools.yml  ellen.yml  infra-tag.yml  skywinone.yml  weather.yml
apps/db-tools/: Dockerfile  GitVersion.yml
apps/ellen/: .dockerignore  Dockerfile  GitVersion.yml  README.md  pyproject.toml
apps/ellen/app/: auth.py  config.py  flatten.py  insidan.py  main.py  sheets.py
apps/ellen/tests/: test_flatten.py  test_insidan.py
apps/skywinone/: Dockerfile  GitVersion.yml
apps/weather/: Dockerfile  GitVersion.yml  README.md  pyproject.toml
apps/weather/app/: config.py  holfuy.py  lfv.py  main.py  pgsql.py
apps/weather/tests/: test_holfuy.py  test_lfv.py  test_save_to_db.py
charts/acme-sync/: Chart.yaml  values.yaml
charts/adsb-state-events/: Chart.yaml  values.yaml
charts/adsb-ultrafeeder/: Chart.yaml  values.yaml
charts/argo-cd/: Chart.yaml  values.yaml
charts/authelia/: Chart.yaml  values.yaml
charts/authentik/: Chart.yaml  values.yaml
charts/db-tools/: Chart.yaml  values.yaml
charts/ellen/: Chart.yaml  values.yaml
charts/insidan-api/: Chart.yaml  values.yaml
charts/insidan-web/: Chart.yaml  values.yaml
charts/k3s/: registries.yaml  secret-manager-account.yaml
charts/kanidm/: Chart.yaml  README.md  values.yaml
charts/lldap/: Chart.yaml  values.yaml
charts/mysql/: Chart.yaml  values.yaml
charts/postgres/: Chart.yaml  values.yaml
charts/proxy/: Chart.yaml  values.yaml
charts/secret-store/: Chart.yaml  values.schema.json  values.yaml
charts/skywinone/: Chart.yaml  values.yaml
charts/weather/: Chart.yaml  values.yaml
clusters/cloud/: root-app.yaml  values-skywinone.yaml
clusters/development/: root-app.yaml
k3s/: README.md  secret-manager-account.yaml  setup_k3s.sh  storageclass.yaml
(+186 files in other folders)
