[project]
name = "weather"
version = "0.1.0"
description = "Syncs weather data from various sources into a PostgreSQL database."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "asyncpg>=0.31.0",
  "beautifulsoup4>=4.14.3",
  "niquests>=3.16.1",
  "pydantic-settings>=2.12.0",
  "pydantic>=2.12.5",
  "pytz>=2025.2",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0"]
