[project]
name = "weather"
version = "0.1.0"
description = "Syncs weather data from various sources into a PostgreSQL database."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "asyncpg>=0.31.0",
  "beautifulsoup4>=4.14.3",
  "niquests>=3.18.7",
  "pydantic-settings>=2.13.1",
  "pydantic>=2.13.2",
  "pytz>=2026.1.post1",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0"]
