[project]
name = "weather"
version = "0.1.0"
description = "Syncs weather data from various sources into a PostgreSQL database."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "asyncpg>=0.31.0",
  "beautifulsoup4>=4.15.0",
  "niquests>=3.19.1",
  "pydantic-settings>=2.14.2",
  "pydantic>=2.13.4",
  "pytz>=2026.2",
]

[dependency-groups]
dev = ["pytest>=9.1.0", "pytest-asyncio>=1.4.0"]
